2006-11-08	kaffeetisch

	* t/GtkEntry.t, xs/GtkEntry.xs: Allow passing undef to
	set_completion.

2006-11-05	kaffeetisch

	* t/GdkPango.t, xs/GdkPango.xs: Add support for
	GdkPangoAttrEmbossColor.

	* t/GdkWindow.t, xs/GdkWindow.xs: Bind gdk_window_beep.

	* t/GtkTreeView.t, xs/GtkTreeView.xs: Bind
	gtk_tree_view_set_show_expanders,
	gtk_tree_view_get_show_expanders,
	gtk_tree_view_set_level_indentation, and
	gtk_tree_view_get_level_indentation.

2006-11-04	kaffeetisch

	* AUTHORS, t/GtkLayout.t, xs/GtkLayout.xs: Add an accessor for
	GtkLayout's bin_window struct member.  Original patch by Philipp
	Rumpf.

2006-10-17	kaffeetisch

	Add support for pango attributes.

	* Gtk2.exports, xs/PangoLayout.xs: Make SvPangoRectangle public
	since it's now needed.

	* t/PangoRenderer.t, xs/PangoAttributes.xs, xs/PangoRenderer.xs:
	Implement a custom boxed wrapper for PangoColor that represents a
	color as an r,g,b tuple.  Use it to wrap
	pango_renderer_[sg]et_color.

	* gtk2perl-private.h: Export
	gtk2perl_pango_attribute_register_custom_type, implement
	GTK2PERL_PANGO_ATTR_REGISTER_CUSTOM_TYPE and
	GTK2PERL_PANGO_ATTR_STORE_INDICES.

	* gtk2perl.h, maps_pango-1.0: Make our custom types for
	PangoAttribute and PangoAttrIterator known.

	* t/PangoAttributes.t, xs/PangoAttributes.xs: Implement and test
	all the attribute contructors, accessors, and support
	infrastructure.

	* t/GdkPango.t, xs/GdkPango.xs: Wrap and test
	gdk_pango_attr_stipple_new and gdk_pango_attr_embossed_new.

	* examples/attributes.pl: Demonstrate some of the attribute stuff.

2006-10-17	kaffeetisch

	* MANIFEST, ppport.h: Remove ppport.h, it's unused.

2006-10-03	kaffeetisch

	* pm/SimpleList.pm: Don't use =cut ... =cut comment blocks.
	They're invalid POD.

	* xs/GtkSelection.xs, xs/PangoTypes.xs: Don't clobber the Gtk2 and
	Gtk2::Pango man pages with POD.

2006-09-13	kaffeetisch

	* Makefile.PL (find_extra_libs): Also look for Cairo.lib to make
	linking work on win32.

2006-09-10	kaffeetisch
