@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 use strict;
-use Gtk2::TestHelper tests => 12;
+use Gtk2::TestHelper tests => 14;
 
 # $Header$
 
@@ -45,6 +45,16 @@ SKIP: {
     unless (Gtk2::Pango -> CHECK_VERSION(1, 6, 0));
 
   isa_ok($context -> get_font_map(), "Gtk2::Pango::FontMap");
+}
+
+SKIP: {
+  skip("new 1.16 stuff", 2)
+    unless (Gtk2::Pango -> CHECK_VERSION(1, 15, 0)); # FIXME: 1.16
+
+  ok(defined $context -> get_gravity());
+
+  $context -> set_base_gravity("north");
+  is($context -> get_base_gravity(), "north");
 }
 
 __END__
